Temporarily use non-minified version of detector

--- a/detector_demo.html
+++ b/detector_demo.html
@@ -109,7 +109,7 @@ input#input {
 }
 
 </style>
-<script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.2.0/zawgyi_detector.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.2.0/zawgyi_detector.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
 </head>
 <body><div id="main">
